fix(workspace): carry the root repository lookup order into member policy