@@ -2,6 +2,7 @@ package sh.zolt.workspace.discovery;
 
 import java.nio.file.Path;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -155,7 +156,9 @@ public final class ManifestWorkspaceLoader {
                 effective.workspace().name().value(),
                 members.stream().map(WorkspaceMember::path).toList(),
                 defaultMembers(discovered),
-                Map.copyOf(repositories),
+                // Never Map.copyOf: WorkspacePolicyMerger seeds a member's merged repository map from
+                // this one, and design §8.5 makes iteration order the first-match-wins lookup order.
+                Collections.unmodifiableMap(repositories),
                 platforms(effective.root()),
                 repositorySettings,
                 repositoryCredentials(effective.root()));
